Fixed memory to the JVM, added name feature